--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -8,7 +8,7 @@
         android:layout_marginTop="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/background_project"
             android:id="@+id/project_card"
@@ -242,8 +242,13 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/team_container"
-                android:layout_width="0dp"
+                android:scrollbars="vertical"
+                android:nestedScrollingEnabled="true"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
+                app:layout_constrainedHeight="true"
+                app:layout_constrainedWidth="true"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/background_project"
                 app:layout_constraintTop_toBottomOf="@+id/view"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -266,9 +271,9 @@
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/team_list"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    app:layout_constrainedHeight="true"
+                    android:nestedScrollingEnabled="true"
                     android:orientation="vertical"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
