--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="Theme.YUTA" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.YUTA.Login" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/orange</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/blue</item>
@@ -11,7 +11,7 @@
         <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="Theme.YUTA.Login" parent="Theme.YUTA">
+    <style name="Theme.YUTA" parent="Theme.YUTA.Login">
         <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:navigationBarColor">?colorSecondary</item>
     </style>
