--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragments.TeamsFragment">
+        tools:context=".ui.fragment.TeamsFragment">
 
     <androidx.core.widget.NestedScrollView
             android:id="@+id/scrollView"
