--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragment.TasksFragment">
+        tools:context="com.yuta.__old.ui.fragment.TasksFragment">
 
     <TextView
             android:layout_width="match_parent"
