--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,13 +7,13 @@
 
     <fragment
             android:id="@+id/profileFragment"
-            android:name="com.yuta.__old.ui.fragments.ProfileFragment"
+            android:name="com.yuta.__old.ui.fragment.ProfileFragment"
             android:label="fragment_profile"
             tools:layout="@layout/fragment_profile">
     </fragment>
     <fragment
             android:id="@+id/readonlyProfileFragment"
-            android:name="com.yuta.__old.ui.fragments.ReadonlyProfileFragment"
+            android:name="com.yuta.__old.ui.fragment.ReadonlyProfileFragment"
             android:label="ReadonlyProfileFragment">
         <argument
                 android:name="userId"
@@ -22,7 +22,7 @@
     </fragment>
     <fragment
             android:id="@+id/projectsFragment"
-            android:name="com.yuta.__old.ui.fragments.ProjectsFragment"
+            android:name="com.yuta.__old.ui.fragment.ProjectsFragment"
             android:label="fragment_projects"
             tools:layout="@layout/fragment_projects">
         <action
@@ -35,12 +35,12 @@
     </fragment>
     <fragment
             android:id="@+id/tasksFragment"
-            android:name="com.yuta.__old.ui.fragments.TasksFragment"
+            android:name="com.yuta.__old.ui.fragment.TasksFragment"
             android:label="fragment_tasks"
             tools:layout="@layout/fragment_tasks" />
     <fragment
             android:id="@+id/teamsFragment"
-            android:name="com.yuta.__old.ui.fragments.TeamsFragment"
+            android:name="com.yuta.__old.ui.fragment.TeamsFragment"
             android:label="fragment_teams"
             tools:layout="@layout/fragment_teams">
         <action
@@ -53,7 +53,7 @@
     </fragment>
     <fragment
             android:id="@+id/searchFragment"
-            android:name="com.yuta.__old.ui.fragments.SearchFragment"
+            android:name="com.yuta.__old.ui.fragment.SearchFragment"
             android:label="fragment_search"
             tools:layout="@layout/fragment_search">
         <action
