--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -40,7 +40,7 @@
             tools:layout="@layout/fragment_tasks" />
     <fragment
             android:id="@+id/teamsFragment"
-            android:name="com.yuta.__old.ui.fragment.TeamsFragment"
+            android:name="com.yuta.teams.ui.TeamsFragment"
             android:label="fragment_teams"
             tools:layout="@layout/fragment_teams">
         <action
